--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="text/css" href="/static/images/logo.png">
-    <title>AppToken Wallet</title>
+    <title>APPIToken Wallet</title>
   </head>
   <body>
     <div id="app"></div>
